samples/_failures_safe/1761465554_ffc7ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_786bc36d.c: In function ‘main’:
./samples/SAFE/__tmp_786bc36d.c:168:17: error: expected expression at end of input
  168 |                 if (ctx.last_command == CMD_EXIT)
      |                 ^~
./samples/SAFE/__tmp_786bc36d.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_786bc36d.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_786bc36d.c:168:17: error: expected declaration or statement at end of input
